<resources>
    <string name="app_name">Annihilation Intelligence</string>
    <string name="title_activity_splash">@string/app_name</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="title_activity_options">@string/sOptions</string>
    <string name="title_activity_instructions">How to play</string>

    <!--MainMenu Strings-->
    <string name="sStart">Start Game</string>
    <string name="sInstructions">How to play</string>
    <string name="sOptions">Options</string>
    <string name="sExit">Exit</string>
    <string name="sLoading">Loading...</string>
    <string name="sAI">Annihilation Intelligence</string>
    <string name="sReturn">Return to menu</string>

    <!--Defines Strings-->
    <string name="sMusic">Music Volume</string>
    <string name="sSound">Sound Volume</string>
    <string name="sInvX">Invert X axis</string>
    <string name="sInvY">Invert Y axis</string>
    <string name="sOrien">Orientation</string>
    <string name="sRestore">Restore Settings</string>
    <string name="sCancel">Cancel</string>
    <string name="sSave">Save</string>

</resources>
