<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="simonchiu.annihilationintelligence.Activity.MenuActivity">

    <ImageView
        android:id="@+id/splash_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/img_menu"
        android:layout_alignParentStart="true"
        android:scaleType="fitXY"
        android:adjustViewBounds="true"/>

    <Button
        android:text="@string/sStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/start"
        app:layout_anchor="@+id/splash_image"
        app:layout_anchorGravity="center_vertical|center_horizontal"
        android:layout_gravity="center_vertical|center_horizontal"
        android:onClick="start"/>

    <Button
        android:text="@string/sOptions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/options"
        android:layout_below="@+id/start"
        android:layout_centerHorizontal="true"
        app:layout_anchor="@+id/splash_image"
        app:layout_anchorGravity="center_vertical|center_horizontal"
        android:layout_gravity="bottom|center_horizontal"
        android:onClick="options"/>

    <Button
        android:text="@string/sExit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/exit"
        android:layout_below="@+id/options"
        android:layout_alignStart="@+id/options"
        app:layout_anchor="@+id/splash_image"
        app:layout_anchorGravity="bottom|center_horizontal"
        android:layout_gravity="center_vertical|center_horizontal"
        android:onClick="exit"/>

    <TextView
        android:text="@string/sAI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        tools:text="Annihilation Intelligence"
        android:layout_above="@+id/start"
        android:layout_centerHorizontal="true"
        android:textSize="36sp"
        android:textColor="@android:color/white" />

</RelativeLayout>
